[gd_scene load_steps=9 format=2]

[ext_resource path="res://Activos/Fonts/Kenney High.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Escenas/PantallaSeleccion.gd" type="Script" id=2]
[ext_resource path="res://Activos/UI Base Pack/PNG/blue_button00.png" type="Texture" id=3]
[ext_resource path="res://Activos/UI Base Pack/PNG/red_button11.png" type="Texture" id=4]
[ext_resource path="res://Activos/UI Base Pack/PNG/grey_button00.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="PantallaSeleccion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 189.0
margin_top = 442.0
margin_right = 530.0
margin_bottom = 838.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Estado" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 341.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "¿Dónde vives?"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 341.0
margin_bottom = 64.0

[node name="SelectorEstado" type="OptionButton" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 341.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
text = "selecciona  tu  estado"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 341.0
margin_bottom = 110.0

[node name="TipoAventura" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 341.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 1 )
text = "¿Qué tipo de aventura prefieres?"
align = 1
valign = 1
autowrap = true

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 341.0
margin_bottom = 296.0

[node name="SelectorAventura" type="OptionButton" parent="CenterContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 341.0
margin_bottom = 334.0
custom_fonts/font = SubResource( 2 )
text = "Selecciona tu tipo de aventura"

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 341.0
margin_bottom = 342.0

[node name="BotonInicio" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 341.0
margin_bottom = 396.0
rect_min_size = Vector2( 300, 50 )
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/BotonInicio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Iniciar juego"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="CenterContainer/VBoxContainer/SelectorEstado" to="." method="_on_SelectorEstado_item_selected"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/SelectorAventura" to="." method="_on_SelectorAventura_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BotonInicio" to="." method="_on_BotonInicio_pressed"]
